--- a/style/css/style.css
+++ b/style/css/style.css
@@ -327,8 +327,9 @@ body {
   width: 900px;
 }
 .logout {
+  text-align: right;
   float: right;
-  margin: 33px 0;
+  margin: 33px -500px;
 }
 .logout a {
   color: #fff;
